--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
           <em>Kisses Owed Counter</em>.
         </p>
         <p>Do you accept this mission?</p>
-        <button id="accept">Yes, I accept 💕</button>
-        <button id="decline">No</button>
+        <button id="accept" type="button">Yes, I accept 💕</button>
+        <button id="decline" type="button">No</button>
         <div id="intro-status" class="status" aria-live="polite"></div>
       </div>
 
@@ -166,17 +166,15 @@
 
         <div class="question" data-answer="09/14/24">
           <p>1️⃣ Grox nsn go cdkbd nkdsxq?</p>
-          <div class="cipher">09/14/24</div>
           <input id="q1" placeholder="MM/DD/YY" autocomplete="off" />
-          <button class="submit" data-question="1">Submit</button>
+          <button class="submit" data-question="1" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
         <div class="question" data-answer="10/11/24">
           <p>2️⃣ Grox gkc yeb psbcd uscc?</p>
-          <div class="cipher">10/11/24</div>
           <input id="q2" placeholder="MM/DD/YY" autocomplete="off" />
-          <button class="submit" data-question="2">Submit</button>
+          <button class="submit" data-question="2" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
@@ -184,7 +182,7 @@
           <p>3️⃣ Grobo gkc yeb psbcd nkdo?</p>
           <div class="cipher">bkqo byyw</div>
           <input id="q3" placeholder="Location" autocomplete="off" />
-          <button class="submit" data-question="3">Submit</button>
+          <button class="submit" data-question="3" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
@@ -192,7 +190,7 @@
           <p>4️⃣ Gry cksn “S vyfo iye” psbcd?</p>
           <div class="cipher">tocck</div>
           <input id="q4" placeholder="Name" autocomplete="off" />
-          <button class="submit" data-question="4">Submit</button>
+          <button class="submit" data-question="4" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
@@ -200,15 +198,14 @@
           <p>5️⃣ Grobo nsn go qy pyb yeb 1-iokb kxxsfobckbi?</p>
           <div class="cipher">dro wod</div>
           <input id="q5" placeholder="Place" autocomplete="off" />
-          <button class="submit" data-question="5">Submit</button>
+          <button class="submit" data-question="5" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
         <div class="question" data-answer="11/08/25">
           <p>6️⃣ Grkd nki gkc iyeb pkfybsdo “ioc” cy pkb?</p>
-          <div class="cipher">11/08/25</div>
           <input id="q6" placeholder="MM/DD/YY" autocomplete="off" />
-          <button class="submit" data-question="6">Submit</button>
+          <button class="submit" data-question="6" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
