--- a/index.html
+++ b/index.html
@@ -180,24 +180,21 @@
 
         <div class="question" data-answer="bkqo byyw">
           <p>3️⃣ Grobo gkc yeb psbcd nkdo?</p>
-          <div class="cipher">bkqo byyw</div>
-          <input id="q3" placeholder="Location" autocomplete="off" />
+          <input id="q3" autocomplete="off" />
           <button class="submit" data-question="3" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
         <div class="question" data-answer="tocck">
           <p>4️⃣ Gry cksn “S vyfo iye” psbcd?</p>
-          <div class="cipher">tocck</div>
-          <input id="q4" placeholder="Name" autocomplete="off" />
+          <input id="q4" autocomplete="off" />
           <button class="submit" data-question="4" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
 
         <div class="question" data-answer="dro wod">
           <p>5️⃣ Grobo nsn go qy pyb yeb 1-iokb kxxsfobckbi?</p>
-          <div class="cipher">dro wod</div>
-          <input id="q5" placeholder="Place" autocomplete="off" />
+          <input id="q5" autocomplete="off" />
           <button class="submit" data-question="5" type="button">Submit</button>
           <div class="feedback" aria-live="polite"></div>
         </div>
